2007-12-04  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/head-funkywinter.png,
	data/graphics/sprites/head-funkywinter.xml,
	data/graphics/sprites/head-mask.png,
	data/graphics/sprites/head-mask.xml,
	data/graphics/sprites/head-mushroom.png,
	data/graphics/sprites/head-mushroom.xml,
	data/graphics/sprites/head-shroom.png,
	data/graphics/sprites/head-shroom.xml,
	data/graphics/sprites/head-tophat.png,
	data/graphics/sprites/head-tophat.xml,
	data/graphics/sprites/head-xmaself.png,
	data/graphics/sprites/head-xmaself.xml,
	data/graphics/items/armor-head-xmaself.png,
	data/graphics/items/armor-head-mask.png,
	data/items.xml: Added/renamed some headgears for the christmas event.

2007-11-20  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/maps/new_1-1.tmx,
	data/graphics/maps/new_3-1.tmx,
	data/graphics/maps/new_15-1.tmx: Updated desert maps with new
	tiles by Len.

2007-11-16  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/resources/image.cpp: Sped up recoloring of transparent pixels.

2007-11-16  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/log.cpp, src/utils/wingettimeofday.h: Removed useless win32
	implementation of gettimeofday.
	* src/log.cpp, tmw.cbp: Fixed minor issues.

2007-11-11  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/item_amount.cpp, src/gui/item_amount.h,
	src/gui/inventorywindow.cpp: Moved check on dropping 1 item to the
	inventory dialog.

2007-11-09  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/chest-chainmail-male,
	data/graphics/sprites/chest-chainmail-female,
	data/graphics/sprites/chest-cotton-male,
	data/graphics/sprites/chest-cotton-female,
	data/graphics/sprites/chest-leather-male,
	data/graphics/sprites/chest-leather-female,
	data/graphics/sprites/chest-tnecksweater-male,
	data/graphics/sprites/chest-tnecksweater-female,
	data/graphics/sprites/chest-vnecksweater-male,
	data/graphics/sprites/chest-vnecksweater-female: